--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Zhicheng Guo</title>
+  <title>Kecheng Chen</title>
   <script async="" src="./JS_CSS_Files/analytics.js"></script>
   <script src="./JS_CSS_Files/jquery-1.11.2.min.js"></script>
   <script src="./JS_CSS_Files/bootstrap.min.js"></script>
@@ -11,7 +11,7 @@
     body {
       font-family: 'sans-serif';
       font-size: 16px;
-      background-color: #FFFCF4;
+      background-color: #ffffff;
       color: #4F6071;
     }
 
@@ -23,7 +23,7 @@
       width: 100%;
       height: 360px;
       /*background-color: #F0EAD6*/
-      background-color: #FFFCF4;
+      background-color: #ffffff;
     }
 
     #header-inner {
