--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <body data-gr-c-s-loaded="true">
   <div id="header">
     <div id="header-inner">
-      <img src="./images/me.jpg" class="img-thumbnail img-me">
+      <img src="./images/A61717B1-256D-457B-9015-7D9606B051F4.jpg" class="img-thumbnail img-me">
       <div class="header-text">
         <div class="header-text-name">
           Kecheng Chen
