--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           I'm currently working on : <br>
           (1) Medical Image Processing, including denoising, detection and so on <br>
           (2) Digital Signal Processing, including TEM signal and EEG signal denoising <br>
-          <font color="red"> Now, I am a reviewer of ICML 2022. </font>
+          
         </div>
         
         <div>
@@ -235,7 +235,7 @@
             </a>
           </div>
           <div class="paper-authors">
-            <u>Mingyue Wang</u>, Fanqiang Lin, Kecheng Chen, Wei Luo, and Sunyuan Qiang
+            <u>Mingyue Wang</u>, Fanqiang Lin, <u>Kecheng Chen* (Equal Contribution)</u>, Wei Luo, and Sunyuan Qiang
           </div>
           <div class="paper-detail">
             Published in <b> TGRS </b> IEEE Transactions on Geoscience and Remote Sensing</b>
