--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         <div class="row">
           <div class="col-xs-3 text-center">
-            <img class="project-image" src="./images/publications/temnlnet.jpg">
+            <img class="project-image" src="./images/temnlnet.jpg">
           </div>
           <br><br>
           <div class="paper-title">
