--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
             </a>
           </div>
           <div class="paper-authors">
-            <u>Mingyue Wang</u>, Fanqiang Lin, <u>Kecheng Chen* (Equal Contribution)</u>, Wei Luo, and Sunyuan Qiang
+            <b>Mingyue Wang</b>, Fanqiang Lin, <b>Kecheng Chen (Equal Contribution)</b>, Wei Luo, and Sunyuan Qiang
           </div>
           <div class="paper-detail">
-            Published in <b> TGRS </b> IEEE Transactions on Geoscience and Remote Sensing</b>
+            Published in <b> TGRS </b>,  IEEE Transactions on Geoscience and Remote Sensing</b>
           </div>
         </div>
 
@@ -254,10 +254,10 @@
             </a>
           </div>
           <div class="paper-authors">
-            <u>Kecheng Chen</u>, Kun Long, Jiayu Sun, Yazhou Ren, and Xiaorong Pu
+            <b>Kecheng Chen</b>, Kun Long, Jiayu Sun, Yazhou Ren, and Xiaorong Pu
           </div>
           <div class="paper-detail">
-            Accepted to <b> ACM MM 2021 </b> (ACM International Conference on Multimedia)</b>
+            Accepted to <b> ACM MM 2021 </b> ,(ACM International Conference on Multimedia)</b>
           </div>
         </div>
 
@@ -272,10 +272,10 @@
             </a>
           </div>
           <div class="paper-authors">
-            <u>Kecheng Chen</u>, Xiaorong Pu, Yazhou Ren, Hang Qiu, Fanqiang Lin, and Saiming Zhang
+            <b>Kecheng Chen</b>, Xiaorong Pu, Yazhou Ren, Hang Qiu, Fanqiang Lin, and Saiming Zhang
           </div>
           <div class="paper-detail">
-            Published in <b> TGRS </b> IEEE Transactions on Geoscience and Remote Sensing</b>
+            Published in <b> TGRS </b>, IEEE Transactions on Geoscience and Remote Sensing</b>
           </div>
         </div>
 
