--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <b>Mingyue Wang</b>, Fanqiang Lin, <b>Kecheng Chen (Equal Contribution)</b>, Wei Luo, and Sunyuan Qiang
           </div>
           <div class="paper-detail">
-            Published in <b> TGRS </b>,  IEEE Transactions on Geoscience and Remote Sensing</b>
+            Published in <b> TGRS </b>,  (IEEE Transactions on Geoscience and Remote Sensing)</b>
           </div>
         </div>
 
@@ -275,7 +275,7 @@
             <b>Kecheng Chen</b>, Xiaorong Pu, Yazhou Ren, Hang Qiu, Fanqiang Lin, and Saiming Zhang
           </div>
           <div class="paper-detail">
-            Published in <b> TGRS </b>, IEEE Transactions on Geoscience and Remote Sensing</b>
+            Published in <b> TGRS </b>, (IEEE Transactions on Geoscience and Remote Sensing)</b>
           </div>
         </div>
 
