--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   <div class="container">
     <div class="col-md-11 col-md-offset-1">
       <div class="row">
-        <h2>About Me</h2>
+        <h2>Biography</h2>
         <div class="vspace">
           I am a final year master student in the School of Computer Science and Engineering at University of Electronic Science and Technology of China, and major in Computer Science.  
     
@@ -226,7 +226,7 @@
 
         <div class="row">
           <div class="col-xs-3 text-center">
-            <img class="project-image" src="./images/temnlnet.jpg">
+            <img class="project-image" src="./images/temnlnet.png">
           </div>
           <br><br>
           <div class="paper-title">
