--- a/index.html
+++ b/index.html
@@ -198,9 +198,8 @@
           I am a final year master student in the School of Computer Science and Engineering at University of Electronic Science and Technology of China, and major in Computer Science.  
     
           <br>
-          My advisor is  <a href="https://www.scse.uestc.edu.cn/info/1081/11024.htm" target="_blank">Prof. Xiaorong Pu</a> 
-          <br>
-          I earned my bachelor's degree in Electronic Information Science and Technology from Chengdu University of Technology in 2019.
+          My advisor is  <a href="https://www.scse.uestc.edu.cn/info/1081/11024.htm" target="_blank">Prof. Xiaorong Pu</a> I earned my bachelor's degree in Electronic Information Science and Technology from Chengdu University of Technology in 2019.
+          <br> 
         </div>
     
 
