--- a/index.html
+++ b/index.html
@@ -293,15 +293,15 @@
           </div>
           <br><br>
           <div class="paper-title">
-            <a href="https://sutdcv.github.io/multi-modal-video-reasoning/#/" target="_blank">
+            <a href="https://www.en.scse.uestc.edu.cn/info/1010/1695.htm" target="_blank">
            The Fourth International Symposium on Image Computing and Digital Medicine (ISICDM 2020)  
             </a>
           </div>
           <div class="paper-authors">
-          Challege for Low-dose CT Image Quality Optimization
+          Challege for The Quality Optimization for Low-dose CT Image
           </div>
           <div class="paper-detail">
-          I won the <b> 1st </b> place as the <b> first author</b>.</b>
+          Our team won the <b> 1st </b> place and I am as the <b> first author</b>.</b>
           </div>
         </div>
 
