--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <div class="row">
         <h2>Biography</h2>
         <div class="vspace">
-          I am a PhD student in Department of Electrical Engineering, City University of Hong Kong. My advisor is <a href="https://hlli1991.github.io/" target="_blank"> Dr. Haoliang Li.</a>
+          I am a PhD student in Department of Electrical Engineering, City University of Hong Kong, co-supervised by <a href="https://scholars.cityu.edu.hk/en/persons/hong-yan(e4dbdba0-cead-46cb-b7e2-ed86fd3cec9b).html" target="_blank"> Chair Prof. Yan Hong. </a> 
           
           <br>
           Before that, I obtained my Master Degree with Computer Science and Engineering from UESTC, My advisor was  <a href="https://www.scse.uestc.edu.cn/info/1081/11024.htm" target="_blank">Prof. Xiaorong Pu.</a> 
