--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <img src="./images/me.jpg" class="img-thumbnail img-me">
       <div class="header-text">
         <div class="header-text-name">
-          Kecheng Chen
+          Kecheng Chen (陈柯成)
         </div>
         <div class="header-text-email">
           cs.ckc96 [at] gmail.com
