--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <img src="./images/me.jpg" class="img-thumbnail img-me">
       <div class="header-text">
         <div class="header-text-name">
-          Kecheng Chen (陈柯成)
+          Kecheng Chen(陈柯成)
         </div>
         <div class="header-text-email">
           cs.ckc96 [at] gmail.com
@@ -195,7 +195,7 @@
       <div class="row">
         <h2>Biography</h2>
         <div class="vspace">
-          I am a PhD student in Department of Electrical Engineering, City University of Hong Kong, co-supervised by <a href="https://scholars.cityu.edu.hk/en/persons/hong-yan(e4dbdba0-cead-46cb-b7e2-ed86fd3cec9b).html" target="_blank"> Chair Prof. Yan Hong（严洪）. </a> and <a href="https://hlli1991.github.io/" target="_blank"> Dr. Li Haoliang(李皓亮). </a>  
+          I am a PhD student in Department of Electrical Engineering, City University of Hong Kong, co-supervised by <a href="https://scholars.cityu.edu.hk/en/persons/hong-yan(e4dbdba0-cead-46cb-b7e2-ed86fd3cec9b).html" target="_blank"> Chair Prof. Yan Hong(严洪) </a> and <a href="https://hlli1991.github.io/" target="_blank"> Dr. Li Haoliang(李皓亮). </a>  
           
           <br>
           Before that, I obtained my Master Degree with Computer Science and Engineering from UESTC, My advisor was  <a href="https://www.scse.uestc.edu.cn/info/1081/11024.htm" target="_blank">Prof. Xiaorong Pu.</a> 
