--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
     <div id="header-inner">
       <img src="./images/me.jpg" class="img-thumbnail img-me">
       <img src="./images/F66B9665-72BA-4197-9A31-9608C707DED3.jpeg" class="img-thumbnail img-me">
+      <img src="./images/xiyang.jpeg" class="img-thumbnail img-me">
       <div class="header-text">
         <div class="header-text-name">
           Kecheng Chen(陈柯成)
