--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
       <img src="./images/F66B9665-72BA-4197-9A31-9608C707DED3.jpeg" class="img-thumbnail img-me">
       <img src="./images/xiyang.jpeg" class="img-thumbnail img-me">
       <img src="./images/me2.jpeg" class="img-thumbnail img-me">
+      </div>
+    </div>
+  </div>
+  <body data-gr-c-s-loaded="true">
+  <div id="header">
+    <div id="header-inner">
       <div class="header-text">
         <div class="header-text-name">
           Kecheng Chen(陈柯成)
