--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <div class="row">
         <h2>Biography</h2>
         <div class="vspace">
-          I am a PhD student in Department of Electrical Engineering, City University of Hong Kong, co-supervised by <a href="https://scholars.cityu.edu.hk/en/persons/hong-yan(e4dbdba0-cead-46cb-b7e2-ed86fd3cec9b).html" target="_blank"> Chair Prof. Yan Hong(严洪) </a> and <a href="https://hlli1991.github.io/" target="_blank"> Dr. Li Haoliang(李皓亮). </a>  
+          I am a PhD student in Department of Electrical Engineering, City University of Hong Kong, co-supervised by <a href="https://scholars.cityu.edu.hk/en/persons/hong-yan(e4dbdba0-cead-46cb-b7e2-ed86fd3cec9b).html" target="_blank"> Prof. Yan Hong(严洪) </a> and <a href="https://hlli1991.github.io/" target="_blank"> Dr. Li Haoliang(李皓亮). </a>  
           
           <br>
           Before that, I obtained my Master Degree with Computer Science and Engineering from University of Electronic Science and Technology of China, my advisor was  <a href="https://www.scse.uestc.edu.cn/info/1081/11024.htm" target="_blank">Prof. Xiaorong Pu(蒲晓蓉).</a> 
@@ -230,7 +230,24 @@
       <div class="row">
         <h2>Publications</h2>
 
-
+        <div class="row">
+          <div class="col-xs-3 text-center">
+            <img class="project-image" src="./images/temnlnet.png">
+          </div>
+          <br><br>
+          <div class="paper-title">
+            <a href="https://www.sciencedirect.com/science/article/pii/S0010482522009568?via%3Dihub" target="_blank">
+            EEGDnet: Fusing non-local and local self-similarity for EEG signal denoising with transformer
+            </a>
+          </div>
+          <div class="paper-authors">
+            Xiaorong Pu, Peng Yi, <b>Kecheng Chen (Corresponding Author)</b>, Zhaoqi Ma, Di Zhao and Yazhou Ren
+          </div>
+          <div class="paper-detail">
+            Published in <b> CIBM </b> (Computers in Biology and Medicine)</b>
+          </div>
+        </div>
+      
         <div class="row">
           <div class="col-xs-3 text-center">
             <img class="project-image" src="./images/temnlnet.png">
