--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
         <div class="row">
           <div class="col-xs-3 text-center">
-            <img class="project-image" src="./images/temnlnet.png">
+            <img class="project-image" src="./images/eegdnet.png">
           </div>
           <br><br>
           <div class="paper-title">
