--- a/index.html
+++ b/index.html
@@ -206,8 +206,9 @@
 
         <div class="vspace">
           I'm currently working on : <br>
-          (1) Medical Image Processing, including denoising, detection and so on <br>
-          (2) Digital Signal Processing, including TEM signal and EEG signal denoising <br>
+          (1) Transfer Learning and its Applications in Medical Images <br>
+          (2) Medical Image Processing, including denoising, detection and so on <br>
+          (3) Digital Signal Processing, including TEM signal and EEG signal denoising <br>
           
         </div>
         
