--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="vspace">
           I'm currently working on : <br>
           (1) Transfer Learning and its Applications in Medical Images <br>
-          (2) Medical Image Processing, including denoising, detection and so on <br>
+          (2) Medical Image Processing, including CT reconstruction, detection and so on <br>
           (3) Digital Signal Processing, including TEM signal and EEG signal denoising <br>
           
         </div>
