--- a/index.html
+++ b/index.html
@@ -230,7 +230,25 @@
 
       <div class="row">
         <h2>Publications</h2>
-
+        
+        <div class="row">
+          <div class="col-xs-3 text-center">
+            <img class="project-image" src="./images/eegdnet.png">
+          </div>
+          <br><br>
+          <div class="paper-title">
+            <a href="https://www.sciencedirect.com/science/article/pii/S0010482522009568?via%3Dihub" target="_blank">
+            Cross-domain Object Classification via Successive Subspace Alignment
+            </a>
+          </div>
+          <div class="paper-authors">
+            <b>Kecheng Chen</b>, Haoliang Li and Hong Yan
+          </div>
+          <div class="paper-detail">
+            Accepted by <b> ICASSP-2023 </b>
+          </div>
+        </div>
+    
         <div class="row">
           <div class="col-xs-3 text-center">
             <img class="project-image" src="./images/eegdnet.png">
