--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         
         <div class="row">
           <div class="col-xs-3 text-center">
-            <img class="project-image" src="./images/eegdnet.png">
+            <img class="project-image" src="./images/截屏2023-02-19 16.38.56.png">
           </div>
           <br><br>
           <div class="paper-title">
