--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <b>Kecheng Chen</b>, Haoliang Li and Hong Yan
           </div>
           <div class="paper-detail">
-            Accepted by <b> ICASSP-2023 </b>
+            Accepted by <b> ICASSP-2023 (IEEE International Conference on Acoustics, Speech, and Signal Processing) </b>
           </div>
         </div>
     
