--- a/index.html
+++ b/index.html
@@ -207,9 +207,8 @@
 
         <div class="vspace">
           I'm currently working on : <br>
-          (1) Transfer Learning and its Applications in Medical Images <br>
-          (2) Medical Image Processing, including CT reconstruction, detection and so on <br>
-          (3) Digital Signal Processing, including TEM signal and EEG signal denoising <br>
+          (1) Transfer Learning (Domain Adaptation/Generalization) and its Applications (Lesion Recognization/Detection and Reconstruction) in Medical Imageing Data <br>
+          (2) Robust Digital Signal Processing with Machine Learning, including TEM signal, EEG signal, and Medical Imaging data Denoising<br>
           
         </div>
         
