--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           </div>
           <br><br>
           <div class="paper-title">
-            <a href="https://www.sciencedirect.com/science/article/pii/S0010482522009568?via%3Dihub" target="_blank">
+            <a href="https://ieeexplore.ieee.org/document/10096792/" target="_blank">
             Cross-domain Object Classification via Successive Subspace Alignment
             </a>
           </div>
