--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
         
         <div class="vspace">
           Reviewers: <br>
-           <font color="red"> Signal, Image and Video Processing; 
+           <font color="red"> Artificial Intelligence In Medicine; 
+             Signal, Image and Video Processing; 
              Artificial Intelligence Review;  
              Imaging Science Journal; 
              ACM-MM; IEEE-GRSL; 
