--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           Kecheng Chen
         </div>
         <div class="header-text-email">
-          cs.ckc96 [at] gmail.com (preferred) / ck.ee@my.cityu.edu.hk
+          cs.ckc96 [at] gmail.com (preferred) / ck.ee [at] my.cityu.edu.hk
         </div>
         <div>
           
