--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             Xiaorong Pu, Peng Yi, <b>Kecheng Chen (Corresponding Author)</b>, Zhaoqi Ma, Di Zhao and Yazhou Ren
           </div>
           <div class="paper-detail">
-            Published in <b> CIBM </b> (Computers in Biology and Medicine)</b>
+            Accepted by <b> CIBM </b> (Computers in Biology and Medicine) 2022</b> 
           </div>
         </div>
       
@@ -303,10 +303,10 @@
             </a>
           </div>
           <div class="paper-authors">
-            <b>Mingyue Wang</b>, Fanqiang Lin, <b>Kecheng Chen (Equal Contribution)</b>, Wei Luo, and Sunyuan Qiang
+             Mingyue Wang, Fanqiang Lin, <b>Kecheng Chen (Equal Contribution)</b>, Wei Luo, and Sunyuan Qiang
           </div>
           <div class="paper-detail">
-            Published in <b> TGRS </b> (IEEE Transactions on Geoscience and Remote Sensing)</b>
+            Aceepted by <b> TGRS </b> (IEEE Transactions on Geoscience and Remote Sensing) 2022</b>
           </div>
         </div>
 
@@ -325,7 +325,7 @@
             <b>Kecheng Chen</b>, Kun Long, Jiayu Sun, Yazhou Ren, and Xiaorong Pu
           </div>
           <div class="paper-detail">
-            Accepted to <b> ACM MM 2021 </b> (ACM International Conference on Multimedia)</b>
+            Accepted by <b> ACM MM 2021 </b> (ACM International Conference on Multimedia)</b>
           </div>
         </div>
 
@@ -343,7 +343,7 @@
             <b>Kecheng Chen</b>, Xiaorong Pu, Yazhou Ren, Hang Qiu, Fanqiang Lin, and Saiming Zhang
           </div>
           <div class="paper-detail">
-            Published in <b> TGRS </b> (IEEE Transactions on Geoscience and Remote Sensing)</b>
+            Accetped by  <b> TGRS </b> (IEEE Transactions on Geoscience and Remote Sensing) 2021 </b>
           </div>
         </div>
 
