--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
 
         <div class="vspace">
           I'm currently working on: <br>
-          (1) Transfer Learning (Domain Adaptation/Generalization) and its Applications (Lesion Recognization/Detection and Reconstruction) in Medical Imaging Data <br>
-          (2) Robust Digital Signal Processing with Machine Learning, including TEM signal, EEG signal, and Medical Imaging data Denoising<br>
+          (1) Transfer Learning (Domain Adaptation/Generalization) and its wide applications in Medical Imaging <br>
+          (2) Robust Complex Digital Signal Processing with Machine Learning, such as TEM and EEG signals<br>
           
         </div>
         
         <div class="vspace">
-          Reviewers: <br>
+          Reviewer Service: <br>
            <font color="red"> Artificial Intelligence In Medicine; 
              Signal, Image and Video Processing; 
              Artificial Intelligence Review;  
