--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <div class="vspace">
           I'm currently working on: <br>
-          (1) Transfer Learning (Domain Adaptation/Generalization) and its wide applications in Medical Imaging <br>
+          (1) Transfer Learning (Domain Adaptation/Generalization) and its wide applications, especially in medical imaging field<br>
           (2) Robust Complex Digital Signal Processing with Machine Learning, such as TEM and EEG signals<br>
           
         </div>
