--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             Xiaorong Pu, Peng Yi, <b>Kecheng Chen (Corresponding Author)</b>, Zhaoqi Ma, Di Zhao and Yazhou Ren
           </div>
           <div class="paper-detail">
-            Accepted by <b> Computers in Biology and Medicine) 2022</b> 
+            Accepted by <b> Computers in Biology and Medicine 2022</b> 
           </div>
         </div>
       
