--- a/index.html
+++ b/index.html
@@ -234,6 +234,26 @@
         </div>
       </div>
 
+      <div class="row">
+        <h2>Publications</h2>
+
+        <div class="row">
+          <div class="col-xs-3 text-center">
+            <img class="project-image" src="./images/截屏2024-02-14 21.43.18.png">
+          </div>
+          <br><br>
+          <div class="paper-title">
+            <a href="https://arxiv.org/pdf/2402.06150.pdf" target="_blank">
+            Cross-domain Low-dose CT Image Denoising with Semantic Preservation and Noise Alignment
+            </a>
+          </div>
+          <div class="paper-authors">
+            Jiaxin Huang, <b> Kecheng Chen </b>, Yazhou Ren, Jiayu Sun, Xiaorong Pu, and Ce Zhu
+          </div>
+          <div class="paper-detail">
+            Accepted by <b> IEEE Transactions on Multimedia 2024 </b>
+          </div>
+        </div>
 
       <div class="row">
         <h2>Publications</h2>
