--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </a>
           </div>
           <div class="paper-authors">
-            Jiaxin Huang, <b> Kecheng Chen </b>, Yazhou Ren, Jiayu Sun, Xiaorong Pu, and Ce Zhu
+            Jiaxin Huang, <b>Kecheng Chen,</b> Yazhou Ren, Jiayu Sun, Xiaorong Pu, and Ce Zhu
           </div>
           <div class="paper-detail">
             Accepted by <b> IEEE Transactions on Multimedia 2024 </b>
