--- a/index.html
+++ b/index.html
@@ -286,30 +286,13 @@
             </a>
           </div>
           <div class="paper-authors">
-            <b>Kecheng Chen</b>, Haoliang Li and Hong Yan
+            <b>Kecheng Chen</b>, Haoliang Li and Hong Yanhttps://github.com/tonyckc/tonyckc.github.io/blob/main/index.html
           </div>
           <div class="paper-detail">
             Accepted by <b> IEEE International Conference on Acoustics, Speech, and Signal Processing 2023 </b>
           </div>
         </div>
     
-        <div class="row">
-          <div class="col-xs-3 text-center">
-            <img class="project-image" src="./images/eegdnet.png">
-          </div>
-          <br><br>
-          <div class="paper-title">
-            <a href="https://www.sciencedirect.com/science/article/pii/S0010482522009568?via%3Dihub" target="_blank">
-            EEGDnet: Fusing non-local and local self-similarity for EEG signal denoising with transformer
-            </a>
-          </div>
-          <div class="paper-authors">
-            Xiaorong Pu, Peng Yi, <b>Kecheng Chen (Corresponding Author)</b>, Zhaoqi Ma, Di Zhao and Yazhou Ren
-          </div>
-          <div class="paper-detail">
-            Accepted by <b> Computers in Biology and Medicine 2022</b> 
-          </div>
-        </div>
       
         <div class="row">
           <div class="col-xs-3 text-center">
