--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       </div>
 
       <div class="row">
-        <h2>Publications</h2>
+        <h2>Journal Publications</h2>
 
         <div class="row">
           <div class="col-xs-3 text-center">
@@ -314,6 +314,11 @@
           </div>
         </div>
 
+        </div>
+      
+        <div class="row">
+        <h2>Conference Publications</h2>
+          
         <div class="row">
           <div class="col-xs-3 text-center">
             <img class="project-image" src="./images/截屏2023-02-19 16.38.56.png">
