--- a/index.html
+++ b/index.html
@@ -339,11 +339,11 @@
 
         <div class="row">
           <div class="col-xs-3 text-center">
-            <img class="project-image" src="./images/截屏2023-02-19 16.38.56.png">
+            <img class="project-image" src="./images/publications/lidnet.jpg">
           </div>
           <br><br>
           <div class="paper-title">
-            <a href="https://ieeexplore.ieee.org/document/10096792/" target="_blank">
+            <a href="https://dl.acm.org/doi/pdf/10.1145/3474085.3475480" target="_blank">
             Lesion-Inspired Denoising Network: Connecting Medical Image Denoising and Lesion Detection
             </a>
           </div>
