--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             </a>
           </div>
           <div class="paper-authors">
-            <b>Kecheng Chen</b>, Haoliang Li and Hong Yanhttps://github.com/tonyckc/tonyckc.github.io/blob/main/index.html
+            <b>Kecheng Chen</b>, Haoliang Li and Hong Yan
           </div>
           <div class="paper-detail">
              <b> IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP) 2023 </b>
@@ -351,7 +351,7 @@
             <b>Kecheng Chen</b>, Kun Long, Jiayu Sun, Yazhou Ren, and Xiaorong Pu
           </div>
           <div class="paper-detail">
-           <b> ACM International Multimedia Conference (MM) </b>
+           <b> ACM International Multimedia Conference (MM) 2021 </b>
           </div>
         </div>
         
