--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <b>Kecheng Chen</b>, Elena Gal, Hong Yan and Haoliang Li
           </div>
           <div class="paper-detail">
-            <b> International Journal of Computer Vision 2024 </b>
+            <b> International Journal of Computer Vision 2024 </b> <a href="https://arxiv.org/pdf/2402.06150.pdf" target="_blank">code </a>
           </div>
         </div>
         
