--- a/index.html
+++ b/index.html
@@ -237,6 +237,24 @@
       <div class="row">
         <h2>Journal Publications</h2>
 
+      <div class="row">
+                <div class="col-xs-3 text-center">
+                  <img class="project-image" src="./images/截屏2024-02-21 11.32.28.png">
+                </div>
+                <br><br>
+                <div class="paper-title">
+                  <a>
+                  Learning Robust Shape Regularization for Generalizable Medical Image Segmentation
+                  </a>
+                </div>
+                <div class="paper-authors">
+                  <b>Kecheng Chen,</b> Tiexin Qin, Victor Ho-Fun Lee, Hong Yan, and Haoliang Li
+                </div>
+                <div class="paper-detail">
+                   <b> IEEE Transactions on Medical Imaging 2024 </b> / <a href="https://tonyckc.github.io/WT-PSE/" target="_blank"> Project Page with Paper and Code </a>
+                </div>
+              </div>
+        
         <div class="row">
           <div class="col-xs-3 text-center">
             <img class="project-image" src="./images/截屏2024-02-21 11.32.28.png">
