--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
       <div class="row">
                 <div class="col-xs-3 text-center">
-                  <img class="project-image" src="./images/截屏2024-02-21 11.32.28.png">
+                  <img class="project-image" src="./images/WT-PSE.PNG">
                 </div>
                 <br><br>
                 <div class="paper-title">
