--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
             </a>
           </div>
           <div class="paper-authors">
-             Mingyue Wang, Fanqiang Lin, <b>Kecheng Chen (Equal Contribution)</b>, Wei Luo, and Sunyuan Qiang
+             Mingyue Wang, Fanqiang Lin, <b> Kecheng Chen*</b>, Wei Luo, and Sunyuan Qiang; *Equal Contribution
           </div>
           <div class="paper-detail">
-           <b> IEEE Transactions on Geoscience and Remote Sensing 2022</b>
+           <b> IEEE Transactions on Geoscience and Remote Sensing 2022</b> / <a href="https://github.com/tonyckc/TEM-NLnet_demo/" target="_blank"> Project Page with Paper and Code </a>
           </div>
         </div>
 
@@ -328,7 +328,7 @@
             <b>Kecheng Chen</b>, Xiaorong Pu, Yazhou Ren, Hang Qiu, Fanqiang Lin, and Saiming Zhang
           </div>
           <div class="paper-detail">
-           <b> IEEE Transactions on Geoscience and Remote Sensing 2021 </b>
+           <b> IEEE Transactions on Geoscience and Remote Sensing 2021 </b>  / <a href="https://github.com/tonyckc/TEMDnet_demo/" target="_blank"> Project Page with Paper and Code </a>
           </div>
         </div>
 
