--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
           Our team won the <b> 1st </b> place and I am as the <b> first author</b>.</b>
           </div>
         </div>
-
+  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=DQNN7163_nm0mRKfU2pbnwCET5DqCjzBTwgyscgKZSI&cl=ffffff&w=a"></script>
 
         
 
