--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
           Our team won the <b> 1st </b> place and I am as the <b> first author</b>.</b>
           </div>
         </div>
-  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=DQNN7163_nm0mRKfU2pbnwCET5DqCjzBTwgyscgKZSI&cl=ffffff&w=a"></script>
+  <a href='https://clustrmaps.com/site/1bypi'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=251&t=t&d=DQNN7163_nm0mRKfU2pbnwCET5DqCjzBTwgyscgKZSI&co=2d78ad&ct=ffffff'/></a>
 
         
 
