--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     }
 
     .paper-title {
-      margin-left: 5em;
+      margin-left: 20em;
       font-size: 18px;
       font-weight: bold;
     }
@@ -139,6 +139,7 @@
 
     .project-image {
       width: 300px;
+      height: 300px;
       /* margin-right: 8em; */
     }
 
