--- a/index.html
+++ b/index.html
@@ -82,12 +82,14 @@
     }
 
     .paper-title {
+      margin-top: 20em;
       margin-left: 20em;
       font-size: 18px;
       font-weight: bold;
     }
 
     .paper-authors {
+      margin-top: 20em;
       margin-left: 22.5em;
       font-style: italic;
     }
@@ -97,6 +99,7 @@
     }
 
     .paper-detail {
+       margin-top: 20em;
       margin-left: 22.5em;
     }
 
@@ -139,7 +142,6 @@
 
     .project-image {
       width: 300px;
-      height: 300px;
       /* margin-right: 8em; */
     }
 
