--- a/index.html
+++ b/index.html
@@ -238,7 +238,25 @@
 
       <div class="row">
         <h2>Journal Publications</h2>
-
+        
+      <div class="row">
+          <div class="col-xs-3 text-center">
+            <img class="project-image" src="./images/截屏2024-02-14 21.43.18.png">
+          </div>
+          <br><br>
+          <div class="paper-title">
+            <a>
+            Cross-domain Low-dose CT Image Denoising with Semantic Preservation and Noise Alignment
+            </a>
+          </div>
+          <div class="paper-authors">
+            Jiaxin Huang, <b>Kecheng Chen</b>, Yazhou Ren, Jiayu Sun, Xiaorong Pu, Ce Zhu
+          </div>
+          <div class="paper-detail">
+            <b> IEEE Transactions on Multimedia 2024 </b>
+          </div>
+        </div>
+        
       <div class="row">
                 <div class="col-xs-3 text-center">
                   <img class="project-image" src="./images/WT-PSE.PNG">
