--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         
       <div class="row">
           <div class="col-xs-3 text-center">
-            <img class="project-image" src="./images/TMM.PNG">
+            <img class="project-image" src="./images/tmm.PNG">
           </div>
           <br><br>
           <div class="paper-title">
