--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         
       <div class="row">
           <div class="col-xs-3 text-center">
-            <img class="project-image" src="./images/tmm.PNG">
+            <img class="project-image" src="./images/截屏2024-02-21 11.32.28.png">
           </div>
           <br><br>
           <div class="paper-title">
