--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
 
         <div class="vspace">
           I'm currently working on: <br>
-          (1) Transfer Learning (Domain Adaptation/Generalization) and its wide applications, with an emphasis on the medical imaging field<be>
-          (2) Image and Video Coding
+          (1) Transfer Learning (Domain Adaptation/Generalization) and its wide applications, with an emphasis on the medical imaging field<br>
+          (2) Image and Video Coding<br>
           (3) Robust Complex Digital Signal Processing with Machine Learning, such as TEM and EEG signals<br>
           
         </div>
