--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <b>Kecheng Chen</b>, Elena Gal, Hong Yan and Haoliang Li
           </div>
           <div class="paper-detail">
-            <b> International Journal of Computer Vision 2024 </b> / <a href="https://tonyckc.github.io/SDDG/" target="_blank"> Project Page with Paper and Code </a>
+            <b> International Journal of Computer Vision (IJCV) 2024 </b> / <a href="https://tonyckc.github.io/SDDG/" target="_blank"> Project Page with Paper and Code </a>
           </div>
         </div>
         
