--- a/index.html
+++ b/index.html
@@ -216,8 +216,27 @@
       </div>
 
       <div class="row">
-        <h2>Journal Publications</h2>
-        
+        <h2>My Works</h2>
+
+
+      <div class="row">
+                <div class="col-xs-3 text-center">
+                  <img class="project-image" src="./images/tnnls.PNG">
+                </div>
+                <br><br>
+                <div class="paper-title">
+                  <a>
+                  Large Language Models for Lossless Image Compression: Next-Pixel Prediction in Language Space is All You Need
+                  </a>
+                </div>
+                <div class="paper-authors">
+                  <b>Kecheng Chen,</b> Pingping Zhang, Hui Liu, Jie Liu, Yibing Liu, Jiaxin Huang, Shiqi Wang, Hong Yan, Haoliang Li
+                </div>
+                <div class="paper-detail">
+                   <b> Preprint </b> / <a href="https://arxiv.org/pdf/2411.12448" target="_blank"> Project Page with Paper and Code </a>
+                </div>
+              </div>
+      
       <div class="row">
                 <div class="col-xs-3 text-center">
                   <img class="project-image" src="./images/tnnls.PNG">
