--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
       <div class="row">
                 <div class="col-xs-3 text-center">
-                  <img class="project-image" src="./images/tnnls.PNG">
+                  <img class="project-image" src="./images/lossless_compression.PNG">
                 </div>
                 <br><br>
                 <div class="paper-title">
@@ -236,7 +236,26 @@
                    <b> Preprint </b> / <a href="https://arxiv.org/pdf/2411.12448" target="_blank"> Project Page with Paper and Code </a>
                 </div>
               </div>
-      
+
+      <div class="row">
+                <div class="col-xs-3 text-center">
+                  <img class="project-image" src="./images/TTA_compression.PNG">
+                </div>
+                <br><br>
+                <div class="paper-title">
+                  <a>
+                  Test-time Adaptation for Image Compression with Distribution Regularization
+                  </a>
+                </div>
+                <div class="paper-authors">
+                  <b>Kecheng Chen,</b> Pingping Zhang, Tiexin Qin, Shiqi Wang, Hong Yan, Haoliang Li
+                </div>
+                <div class="paper-detail">
+                   <b> Preprint </b> / <a href="https://arxiv.org/abs/2410.12191" target="_blank"> Project Page with Paper and Code </a>
+                </div>
+              </div>
+
+        
       <div class="row">
                 <div class="col-xs-3 text-center">
                   <img class="project-image" src="./images/tnnls.PNG">
