--- a/index.html
+++ b/index.html
@@ -370,12 +370,7 @@
           </div>
         </div>
 
-        </div>
-      
-        <div class="row">
-        <h2>Conference Publications</h2>
-          
-        <div class="row">
+        <div class="row vspace-top">
           <div class="col-xs-3 text-center">
             <img class="project-image" src="./images/截屏2023-02-19 16.38.56.png">
           </div>
@@ -393,7 +388,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row vspace-top">
           <div class="col-xs-3 text-center">
             <img class="project-image" src="./images/publications/lidnet.jpg">
           </div>
