--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       </div>
 
       <div class="row">
-        <h2>My Works</h2>
+        <h2>Recent Works and Selected Publications</h2>
 
 
       <div class="row">
