--- a/index.html
+++ b/index.html
@@ -219,23 +219,25 @@
         <h2>Recent Works and Selected Publications</h2>
 
 
-      <div class="row">
-                <div class="col-xs-3 text-center">
-                  <img class="project-image" src="./images/lossless_compression.PNG">
-                </div>
-                <br><br>
-                <div class="paper-title">
-                  <a>
-                  Large Language Models for Lossless Image Compression: Next-Pixel Prediction in Language Space is All You Need
-                  </a>
-                </div>
-                <div class="paper-authors">
-                  <b>Kecheng Chen,</b> Pingping Zhang, Hui Liu, Jie Liu, Yibing Liu, Jiaxin Huang, Shiqi Wang, Hong Yan, Haoliang Li
-                </div>
-                <div class="paper-detail">
-                   <b> Preprint </b> / <a href="https://arxiv.org/pdf/2411.12448" target="_blank"> Project Page with Paper and Code </a>
-                </div>
-              </div>
+     <div class="row" style="display: flex; align-items: flex-start;">
+  <div class="col-xs-3 text-center">
+    <img class="project-image" src="./images/lossless_compression.PNG" style="max-width: 100%; max-height: 200px;">
+  </div>
+  
+  <div style="margin-left: 20px;"> <!-- Add margin to separate text and image -->
+    <div class="paper-title">
+      <a>
+        Large Language Models for Lossless Image Compression: Next-Pixel Prediction in Language Space is All You Need
+      </a>
+    </div>
+    <div class="paper-authors">
+      <b>Kecheng Chen,</b> Pingping Zhang, Hui Liu, Jie Liu, Yibing Liu, Jiaxin Huang, Shiqi Wang, Hong Yan, Haoliang Li
+    </div>
+    <div class="paper-detail">
+      <b> Preprint </b> / <a href="https://arxiv.org/pdf/2411.12448" target="_blank"> Project Page with Paper and Code </a>
+    </div>
+  </div>
+</div>
 
       <div class="row">
                 <div class="col-xs-3 text-center">
