--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
 
         <div class="vspace">
           I'm currently working on: <br>
-          (1) Transfer Learning (Domain Adaptation/Generalization) and its wide applications, with an emphasis on the medical imaging field<br>
-          (2) Image and Video Coding<br>
+          (1) Transfer Learning (Domain Adaptation/Generalization/Test-time Adaptation) and its wide applications in healthcare fields<br>
+          (2) Large Language/-Vision Model for Image and Video Coding<br>
           (3) Robust Complex Digital Signal Processing with Machine Learning, such as TEM and EEG signals<br>
           
         </div>
