--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
           <br><br>
           <div class="paper-title">
             <a>
-              TEMDnet: A Novel Deep Denoising Network for Transient Electromagnetic Signal With Signal-to-Image Transformation
+              TEMDnet: A Novel Deep Denoising Network for Transient Electromagnetic Signal With Signal-to-Image Transformation (ESI Highly Cited Paper)
             </a>
           </div>
           <div class="paper-authors">
