--- a/index.html
+++ b/index.html
@@ -219,26 +219,6 @@
         <h2>Recent Works and Selected Publications</h2>
 
 
-     <div class="row" style="display: flex; align-items: flex-start;">
-  <div class="col-xs-3 text-center">
-    <img class="project-image" src="./images/lossless_compression.PNG" style="max-width: 100%; max-height: 200px;">
-  </div>
-  
-  <div style="margin-left: 2px;"> <!-- Add margin to separate text and image -->
-    <div class="paper-title">
-      <a>
-        Large Language Models for Lossless Image Compression: Next-Pixel Prediction in Language Space is All You Need
-      </a>
-    </div>
-    <div class="paper-authors">
-      <b>Kecheng Chen,</b> Pingping Zhang, Hui Liu, Jie Liu, Yibing Liu, Jiaxin Huang, Shiqi Wang, Hong Yan, Haoliang Li
-    </div>
-    <div class="paper-detail">
-      <b> Preprint </b> / <a href="https://arxiv.org/pdf/2411.12448" target="_blank"> Project Page with Paper and Code </a>
-    </div>
-  </div>
-</div>
-
       <div class="row">
                 <div class="col-xs-3 text-center">
                   <img class="project-image" src="./images/TTA_compression.PNG">
@@ -253,7 +233,7 @@
                   <b>Kecheng Chen,</b> Pingping Zhang, Tiexin Qin, Shiqi Wang, Hong Yan, Haoliang Li
                 </div>
                 <div class="paper-detail">
-                   <b> Preprint </b> / <a href="https://arxiv.org/abs/2410.12191" target="_blank"> Project Page with Paper and Code </a>
+                   <b> International Conference on Learning Representations (ICLR) 2025 </b> / <a href="https://arxiv.org/abs/2410.12191" target="_blank"> Project Page with Paper and Code </a>
                 </div>
               </div>
 
