--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                   <b>Kecheng Chen,</b> Pingping Zhang, Tiexin Qin, Shiqi Wang, Hong Yan, Haoliang Li
                 </div>
                 <div class="paper-detail">
-                   <b> International Conference on Learning Representations (ICLR) 2025 </b> / <a href="https://arxiv.org/abs/2410.12191" target="_blank"> Project Page with Paper and Code </a>
+                   <b> International Conference on Learning Representations (ICLR) 2025 </b> / <a href="https://tonyckc.github.io/TTA-IC-DR/" target="_blank"> Project Page with Paper and Code </a>
                 </div>
               </div>
 
