--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <b>Kecheng Chen</b>, Xiaorong Pu, Yazhou Ren, Hang Qiu, Fanqiang Lin, and Saiming Zhang
           </div>
           <div class="paper-detail">
-           <b> IEEE Transactions on Geoscience and Remote Sensing 2021 </b>  / <a href="https://github.com/tonyckc/TEMDnet_demo/" target="_blank"> Project Page with Paper and Code </a>
+           <b> IEEE Transactions on Geoscience and Remote Sensing 2021 (ESI Highly Cited Paper)</b>  / <a href="https://github.com/tonyckc/TEMDnet_demo/" target="_blank"> Project Page with Paper and Code </a>
           </div>
         </div>
 
