--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
     .vspace {
       margin-bottom: 20px;
     }
-
+    
+    .row {
+      margin-bottom: 3rem;
+    }
+    
     .vspace-top {
       margin-top: 30px;
     }
