--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     }
     
     .row {
-      margin-bottom: 3rem;
+      margin-bottom: 15px;
+      margin-left: 0px
     }
     
     .vspace-top {
