--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                   <b>Kecheng Chen,</b> Jie Liu, Renjie Wan, Victor Ho-Fun Lee, Varut Vardhanabhuti, Hong Yan, and Haoliang Li
                 </div>
                 <div class="paper-detail">
-                   <b> IEEE Transactions on Neural Networks and Learning Systems 2024 </b> / <a href="https://tonyckc.github.io/UDA-BUA/" target="_blank"> Project Page with Paper and Code </a>
+                   <b> IEEE Transactions on Neural Networks and Learning Systems (TNNLS) 2024 </b> / <a href="https://tonyckc.github.io/UDA-BUA/" target="_blank"> Project Page with Paper and Code </a>
                 </div>
               </div>
         
@@ -271,7 +271,7 @@
                   <b>Kecheng Chen,</b> Tiexin Qin, Victor Ho-Fun Lee, Hong Yan, and Haoliang Li
                 </div>
                 <div class="paper-detail">
-                   <b> IEEE Transactions on Medical Imaging 2024 </b> / <a href="https://tonyckc.github.io/WT-PSE/" target="_blank"> Project Page with Paper and Code </a>
+                   <b> IEEE Transactions on Medical Imaging (TMI) 2024 </b> / <a href="https://tonyckc.github.io/WT-PSE/" target="_blank"> Project Page with Paper and Code </a>
                 </div>
               </div>
         
@@ -320,7 +320,7 @@
             <b>Kecheng Chen</b>, Xiaorong Pu, Yazhou Ren, Hang Qiu, Fanqiang Lin, and Saiming Zhang
           </div>
           <div class="paper-detail">
-           <b> IEEE Transactions on Geoscience and Remote Sensing 2021 </b>  / 
+           <b> IEEE Transactions on Geoscience and Remote Sensing (TGRS) 2021 </b>  / 
     <span class="highlight-blue">ESI Highly Cited Paper</span> / <a href="https://github.com/tonyckc/TEMDnet_demo/" target="_blank"> Project Page with Paper and Code </a>
           </div>
         </div>
@@ -336,7 +336,7 @@
              Mingyue Wang, Fanqiang Lin, <b> Kecheng Chen*</b>, Wei Luo, and Sunyuan Qiang; *Equal Contribution
           </div>
           <div class="paper-detail">
-           <b> IEEE Transactions on Geoscience and Remote Sensing 2022</b> / <a href="https://github.com/tonyckc/TEM-NLnet_demo/" target="_blank"> Project Page with Paper and Code </a>
+           <b> IEEE Transactions on Geoscience and Remote Sensing (TGRS) 2022</b> / <a href="https://github.com/tonyckc/TEM-NLnet_demo/" target="_blank"> Project Page with Paper and Code </a>
           </div>
         </div>
 
@@ -352,7 +352,7 @@
             Jiaxin Huang, <b>Kecheng Chen,</b> Yazhou Ren, Jiayu Sun, Xiaorong Pu, and Ce Zhu
           </div>
           <div class="paper-detail">
-             <b> IEEE Transactions on Multimedia 2024 </b>
+             <b> IEEE Transactions on Multimedia (TMM) 2024 </b>
           </div>
         </div>
 
