--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
 
         <div class="vspace">
           I'm currently working on: <br>
-          (1) Transfer Learning (Domain Adaptation/Generalization) and its wide applications, with an emphasis on the medical imaging field<br>
-          (2) Image and Video Coding<br>
-          (3) Robust Complex Digital Signal Processing with Machine Learning, such as TEM and EEG signals<br>
+          (1) Transfer Learning (Domain Adaptation/Generalization/Test-time Adaptation)<br>
+          (2) AI for Healthcare, focusing on Transferable, Reliable, and Robust AI applications<br>
+          (3) LLM/VLM for Multimedia, such as image and video coding<br>
           
         </div>
         
